# Froth

./: .gitmodules  CMakeLists.txt  devlog.md
froth/: CMakeLists.txt  Defines.h.in
froth/src/core/: Application.cpp  Application.h  Hash.h  InputController.cpp  InputController.h  Layer.h  Types.h  UUID.h
froth/src/core/events/: ApplicationEvent.h  Event.h
froth/src/modules/camera/: Camera.h
froth/src/modules/light/: Light.h
froth/src/platform/compiler/: ShaderCompiler.h  ShadercShaderCompiler.cpp  ShadercShaderCompiler.h
froth/src/platform/filesystem/: Filesystem.cpp  Filesystem.h
froth/src/renderer/: Renderer.h
froth/src/renderer/vulkan/: VulkanBuffer.cpp  VulkanContext.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanImage.h  VulkanInstance.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanShaderModuleManager.cpp  VulkanShaderModuleManager.h  VulkanShaderPipeline.cpp  VulkanShaderPipeline.h  VulkanShaderPipelineManager.cpp  VulkanShaderPipelineManager.h  VulkanSwapchainManager.cpp  VulkanSwapchainManager.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexBuffer.cpp
froth/src/resources/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshImporter.cpp  MeshImporter.h  Resource.cpp  Resource.h  ResourceImporter.cpp  ResourceImporter.h  ResourceManager.cpp  ResourceManager.h  ResourceMetadata.h  Shader.cpp  Shader.h  ShaderModule.cpp  ShaderModule.h  ShaderModuleImporter.cpp  ShaderModuleImporter.h  ShaderSource.cpp  ShaderSource.h  ShaderSourceImporter.cpp  ShaderSourceImporter.h  Texture2D.cpp  Texture2D.h  TextureImporter.cpp  TextureImporter.h
froth/src/resources/materials/: Material.h
playground/: CMakeLists.txt  Object.h  Playground.cpp
playground/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
